@@ -55,9 +55,14 @@ setup_gk_args() {
 		GK_ARGS="${GK_ARGS} --linuxrc=/tmp/linuxrc"
 	fi
 
-    if [ "${clst_target}" == "netboot2" -a -n "${clst_merge_path}" ]
+    if [ "${clst_target}" == "netboot2" ]
     then
-        GK_ARGS="${GK_ARGS} --initramfs-overlay=\"${clst_merge_path}\""
+		GK_ARGS="${GK_ARGS} --netboot"
+
+		if [ -n "${clst_merge_path}" ]
+		then
+	        GK_ARGS="${GK_ARGS} --initramfs-overlay=\"${clst_merge_path}\""
+		fi
     fi
 }
 
